<resources>

    <string name="app_name">Orny</string>

    <!--Launch-->
    <string name="launch_sign_in_button">Sign In</string>

    <!--Main-->
    <string name="main_add_expense">Add Expense</string>
    <string name="main_settings">Settings</string>

    <!--Statistics-->
    <string name="statistics_days">Days: %1$d/%2$d</string>
    <string name="statistics_budget">Budget: %1$.1f/%2$.1f</string>
    <string name="statistics_can_spend">Can spend today: %.1f</string>
    <string name="statistics_can_spend_daily">Can spend daily: %1$.1f/%2$.1f</string>
    <string name="statistics_user_spent">%1$s: %2$.1f + %3$.1f = %4$.1f</string>
    <string name="statistics_total_spent">Total: %1$.1f + %2$.1f = %3$.1f</string>
    <string name="statistics_debt">%1$s → %2$.1f → %3$s</string>

    <!--AddExpense-->
    <string name="add_expense_add_title">Add Expense</string>
    <string name="add_expense_action_save">Save</string>
    <string name="add_expense_exit_dialog_title">Unsaved changes</string>
    <string name="add_expense_exit_dialog_message">Save changes?</string>
    <string name="add_expense_exit_dialog_save">Save</string>
    <string name="add_expense_exit_dialog_exit">Exit</string>
    <string name="add_expense_exit_save_progress">Saving expense…</string>
    <string name="add_expense_amount_hint">Amount</string>
    <string name="add_expense_comment_hint">Comment</string>
    <string name="add_expense_off_budget">Off Budget</string>

    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_page_settings">Page Settings</string>
    <string name="settings_app_settings">App Settings</string>
    <string name="settings_default_author">Default Author</string>
    <string name="settings_budget_hint">Budget</string>
    <string name="settings_period_hint">Period</string>
    <string name="settings_save">Save</string>

</resources>
