<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_toolbar"/>

        <EditText
            android:id="@+id/amountView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/add_expense_amount_hint"
            android:inputType="numberDecimal"
            android:textSize="@dimen/add_expense_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarView"
            tools:ignore="UnknownIdInLayout"/>

        <EditText
            android:id="@+id/commentView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/add_expense_comment_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/add_expense_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountView"
            tools:ignore="Deprecated"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/authorsSpinnerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/changeAuthorView"
            app:layout_constraintTop_toBottomOf="@id/commentView"
            tools:listitem="@layout/item_edit_expense_author"/>

        <ImageView
            android:id="@+id/changeAuthorView"
            android:layout_width="@dimen/add_expense_item_height"
            android:layout_height="@dimen/add_expense_item_height"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_repeat_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/authorsSpinnerView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/authorsSpinnerView"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/dateView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/add_expense_item_height"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:textSize="@dimen/add_expense_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorsSpinnerView"
            tools:text="15/01/2000"/>

        <CheckBox
            android:id="@+id/offBudgetView"
            android:layout_width="0dp"
            android:layout_height="@dimen/add_expense_item_height"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_expense_off_budget"
            android:textSize="@dimen/add_expense_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateView"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>

